@@ -420,7 +420,10 @@ Settings.tvshow.renamer.$T=Episode title
 Settings.tvshow.renamer.$F=Video format
 Settings.tvshow.renamer.$1=Season number
 Settings.tvshow.renamer.$2=Season number with at least 2 digits
+Settings.tvshow.renamer.$3=DVD-Season number
+Settings.tvshow.renamer.$4=DVD-Season number with at least 2 digits
 Settings.tvshow.renamer.$E=Episode number
+Settings.tvshow.renamer.$D=DVD-Episode number
 Settings.tvshow.renamer.$R=Video resolution
 Settings.tvshow.renamer.$A=audio code + channels
 Settings.tvshow.renamer.$V=video code + format
